--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ and open the template in the editor.
         <title>Maze Game</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script type="text/javascript" src="./js/MazeClient.js"></script>
+        <script type="text/javascript" src="./js/maze.js"></script>
         <script id="shader-fs" type="x-shader/x-fragment">
             void main(void) {
             gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
@@ -40,7 +41,19 @@ and open the template in the editor.
         <div id="movement" class="right">
             <fieldset>
                 <legend>Movement</legend>
-
+                <table>
+                    <tr>
+                        <td></td><td><input type="image" src="images/arrow_up.png" alt="up" onclick="doMoveCommand('up')"/></td><td></td>
+                    </tr>
+                    <tr>
+                        <td><input type="image" src="images/arrow_left.png" alt="left" onclick="doMoveCommand('left')"/></td>
+                        <td><input type="image" src="images/fire_button.png" alt="fire" onclick="doMoveCommand('fire')"/></td>
+                        <td><input type="image" src="images/arrow_right.png" alt="right" onclick="doMoveCommand('right')"/></td>
+                    </tr>
+                    <tr>
+                        <td></td><td><input type="image" src="images/arrow_down.png" alt="down" onclick="doMoveCommand('down')"/></td><td></td>
+                    </tr>
+                </table>
             </fieldset>
         </div>
         <div id="actions" class="right">
@@ -56,8 +69,7 @@ and open the template in the editor.
                 <p><span id="persons"></span></p>
             </fieldset>
         </div>
-        <canvas id="mazecanvas" width="800" height="800" hidden>
-            Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
+        <canvas id="myCanvas" style="clear: both;" width="600" height="600" >Sorry! You need a modern browser to be able to view this.
         </canvas>
     </body>
 </html>
