--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Maze Game</title>
+        <title>Maze Wars</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script type="text/javascript" src="./js/MazeClient.js"></script>
         <script type="text/javascript" src="./js/maze.js"></script>
@@ -29,7 +29,7 @@ and open the template in the editor.
     </head>
     <body onload="doSetupSocket()">
         <div id="pageheader">
-            <h1>Maze Game</h1>
+            <h1>Maze Wars</h1>
         </div>
         <div id="login" class="left">
             <fieldset>
