--- a/index.html
+++ b/index.html
@@ -7,6 +7,65 @@ and open the template in the editor.
     <head>
         <title>Maze Wars</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel='stylesheet' type="text/css" href="./css/MazeClient.css">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+    </head>
+    <body onload="doSetupSocket()">
+        <div id="wrapper" class="glow">
+            <div id="pageheader">
+                <img src="images/logo.png">
+            </div>
+            <div id="login" class="centered">
+                <fieldset>
+                    <legend>Login</legend>
+                    <p>Nickname: <input type="text" id="uname" size="20" /></p>
+                    <input type="button" class="button grey" value="Login" onclick="doLogin()" id="loginbutton"/>
+                    <input type="button" class="button grey" value="Logout" onclick="doLogout()" disabled id="logoutbutton"/>
+                </fieldset>
+            </div>
+            <canvas id="myCanvas" style="visibility: hidden;" width="600" height="600" >
+                Sorry! You need a modern browser to be able to view this.
+            </canvas>
+            <div id="controlswrapper" style="float:right">
+                <div id="movement" style="visibility: hidden;">
+                    <fieldset>
+                        <legend>Movement</legend>
+                        <table>
+                            <tr>
+                                <td></td><td><input type="image" src="images/arrow_up.png" alt="up" onclick="doMoveCommand('up')"/></td><td></td>
+                            </tr>
+                            <tr>
+                                <td><input type="image" src="images/arrow_left.png" alt="left" onclick="doMoveCommand('left')"/></td>
+                                <td><input type="image" src="images/fire_button.png" alt="fire" onclick="doMoveCommand('fire')"/></td>
+                                <td><input type="image" src="images/arrow_right.png" alt="right" onclick="doMoveCommand('right')"/></td>
+                            </tr>
+                            <tr>
+                                <td></td><td><input type="image" src="images/arrow_down.png" alt="down" onclick="doMoveCommand('down')"/></td><td></td>
+                            </tr>
+                        </table>
+                    </fieldset>
+                </div>
+                <div id="actions" style="visibility: hidden;">
+                    <fieldset>
+                        <legend>Actions</legend>
+                        <input type="button" class="button grey" value="Start" onclick="doStart()" id="startbutton"/>
+                        <input type="button" class="button grey" value="Quit" onclick="doQuit()" id="quitbutton"/>
+                    </fieldset>
+                </div>
+                <div id="people" style="visibility: hidden;">
+                    <fieldset>
+                        <legend>People</legend>
+                        <p><span id="persons"></span></p>
+                    </fieldset>
+                </div>
+                <div id="health" style="visibility: hidden;">
+                    <fieldset>
+                        <legend>Health</legend>
+                        <h2 id="currenthealth"></h2>
+                    </fieldset>
+                </div>
+            </div>
+        </div>
         <script type="text/javascript" src="./js/MazeClient.js"></script>
         <script type="text/javascript" src="./js/maze.js"></script>
         <script id="shader-fs" type="x-shader/x-fragment">
@@ -25,56 +84,6 @@ and open the template in the editor.
             }
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <link rel='stylesheet' type="text/css" href="./css/MazeClient.css">
-    </head>
-    <body onload="doSetupSocket()">
-        <div id="pageheader">
-            <h1>Maze Wars</h1>
-        </div>
-        <div id="login" class="left">
-            <fieldset>
-                <legend>Login</legend>
-                <p>Nickname: <input type="text" id="uname" size="20" /></p>
-                <input type="button" value="Login" onclick="doLogin()" id="loginbutton"/>
-                <input type="button" value="Logout" onclick="doLogout()" disabled id="logoutbutton"/>
-            </fieldset>
-        </div>
-        <canvas id="myCanvas" style="visibility: hidden;" width="600" height="600" >
-            Sorry! You need a modern browser to be able to view this.
-        </canvas>
-        <div id="wrapper" style="float:right">
-            <div id="movement" style="visibility: hidden;">
-                <fieldset>
-                    <legend>Movement</legend>
-                    <table>
-                        <tr>
-                            <td></td><td><input type="image" src="images/arrow_up.png" alt="up" onclick="doMoveCommand('up')"/></td><td></td>
-                        </tr>
-                        <tr>
-                            <td><input type="image" src="images/arrow_left.png" alt="left" onclick="doMoveCommand('left')"/></td>
-                            <td><input type="image" src="images/fire_button.png" alt="fire" onclick="doMoveCommand('fire')"/></td>
-                            <td><input type="image" src="images/arrow_right.png" alt="right" onclick="doMoveCommand('right')"/></td>
-                        </tr>
-                        <tr>
-                            <td></td><td><input type="image" src="images/arrow_down.png" alt="down" onclick="doMoveCommand('down')"/></td><td></td>
-                        </tr>
-                    </table>
-                </fieldset>
-            </div>
-            <div id="actions" style="visibility: hidden;">
-                <fieldset>
-                    <legend>Actions</legend>
-                    <input type="button" value="Start" onclick="doStart()" id="startbutton"/>
-                    <input type="button" value="Quit" onclick="doLogout()" id="quitbutton"/>
-                </fieldset>
-            </div>
-            <div id="people" style="visibility: hidden;">
-                <fieldset>
-                    <legend>People</legend>
-                    <p><span id="persons"></span></p>
-                </fieldset>
-            </div>
-        </div>
         <script>
             $(document).ready(function() {
             $(document).keydown(function(event){
