--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
             <div id="canvaswrapper" style="visibility: hidden">
                 <canvas id="canvas" class="offscreen" style="display: none"></canvas>
+                <img id="viseur" style="display: none" src="assets/viseur.png" />
                 <canvas id="myCanvas" width="700" height="700" style="display: none">
                     Sorry! You need a modern browser to be able to view this.
                 </canvas>
@@ -73,7 +74,6 @@
         <script type="text/javascript" src="./js/maze.js"></script>
         <script type="text/javascript" src="./js/babylon.js"></script>
         <script type="text/javascript" src="./js/cannon.js"></script>
-        <script type="text/javascript" src="./js/qrcode.js"></script>
         <script type="text/javascript" src="./js/fpsmaze.js"></script>
         <script id="shader-fs" type="x-shader/x-fragment">
             void main(void) {
